--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="page2.html">Video Games</a></li>
             <li><a href="page3.html">Music</a></li>
-            <li><a href="page4.html">Jobs</a></li>
+            <li><a href="page4.html">Jobs I've Worked In</a></li>
             <li><a href="page5.html">Shower Thoughts</a></li>
         </ul>
     </nav>
